refactor: move Pico CSS CDN to app.html

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,11 @@
 	<meta charset="utf-8" />
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
+	<!-- Pico CSS -->
+	<link href="
+	https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css
+	" rel="stylesheet">
+
 	%sveltekit.head%
 </head>
 
