--- a/src/app.html
+++ b/src/app.html
@@ -5,10 +5,9 @@
 	<meta charset="utf-8" />
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
+
 	<!-- Pico CSS -->
-	<link href="
-	https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css
-	" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css" rel="stylesheet">
 
 	%sveltekit.head%
 </head>
