--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
 
+	<!-- Pico CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css">
+
 	%sveltekit.head%
 </head>
 
