--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,11 @@
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
 	<meta name="theme-color" content="#13171f" />
+	<style>
+		:root {
+			background-color: #13171f;
+		}
+	</style>
 
 	%sveltekit.head%
 </head>
