--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,8 @@
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
 	<meta name="theme-color" content="#13171f" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css"
-		integrity="sha256-TEvvqgLVzPh1bEBig5RVkaYj0CPGhDrnNLGqhjPIOVg=" crossorigin="anonymous">
-
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css"
+		integrity="sha256-TEvvqgLVzPh1bEBig5RVkaYj0CPGhDrnNLGqhjPIOVg=" crossorigin="anonymous"> -->
 	%sveltekit.head%
 </head>
 
