style: set root background color

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,11 @@
 	<meta name="theme-color" content="#13171f" />
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.0-alpha1/css/pico.min.css"
 		integrity="sha256-TEvvqgLVzPh1bEBig5RVkaYj0CPGhDrnNLGqhjPIOVg=" crossorigin="anonymous"> -->
+	<style>
+		:root {
+			background-color: hsl(220, 11%, 15%);
+		}
+	</style>
 	%sveltekit.head%
 </head>
 
