style: restyle pico using cdn variable overwrites

--- a/src/app.html
+++ b/src/app.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 
 <head>
 	<meta charset="utf-8" />
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
 	<meta name="theme-color" content="#13171f" />
-	<style>
-		:root {
-			background-color: hsl(220, 11%, 15%);
-		}
-	</style>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css" />
 	%sveltekit.head%
 </head>
 
