feat: update font fix #51

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,15 @@
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
 	<meta name="theme-color" content="#13171f" />
+
+	<!-- pico css -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css" />
+
+	<!-- roboto google font -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 	%sveltekit.head%
 </head>
 
