--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8" />
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
-	<meta name="theme-color" content="#13171f" />
 
 	%sveltekit.head%
 </head>
