Add plausible analytics code to app.html

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8" />
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 	<meta name="viewport" content="width=device-width" />
+	<!-- plausible code -->
+	<script defer data-domain="riju.ai" src="https://plausible.io/js/script.js"></script>
 
 	%sveltekit.head%
 </head>
