--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width" />
 	<!-- plausible code -->
 	<script defer data-domain="riju.ai" src="https://plausible.io/js/script.js"></script>
+	<!-- umami code -->
+	<script async src="https://umami.riju.ai/script.js" data-website-id="e2ba4494-a286-4a91-a0ee-34ad783713d2"></script>
 
 	%sveltekit.head%
 </head>
