--- a/src/app.html
+++ b/src/app.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
+        <meta name="viewport" content="width=device-width" />
+        <!-- umami code -->
+        <script
+            async
+            src="https://umami.riju.ai/script.js"
+            data-website-id="04867c7f-e5c1-4295-88f4-9610f565092f"
+        ></script>
 
-<head>
-	<meta charset="utf-8" />
-	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
-	<meta name="viewport" content="width=device-width" />
-	<!-- umami code -->
-	<script async src="https://umami.riju.ai/script.js" data-website-id="04867c7f-e5c1-4295-88f4-9610f565092f"></script>
+        %sveltekit.head%
+    </head>
 
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
-</body>
-
+    <body data-sveltekit-preload-data="hover">
+        <div style="display: contents">%sveltekit.body%</div>
+    </body>
 </html>
