--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
 
+    <!-- Plausible Analytics -->
+    <script defer data-domain="riju.ai" src="https://plausible.io/js/script.pageview-props.tagged-events.js"></script>
+    <script>window.plausible = window.plausible || function () { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
     %sveltekit.head%
 </head>
 
