--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,9 @@
     <script defer data-domain="riju.ai" src="https://plausible.io/js/script.pageview-props.tagged-events.js"></script>
     <script>window.plausible = window.plausible || function () { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
+    <!-- One Dollar Stats -->
+    <script defer data-site-id="riju.ai" src="https://assets.onedollarstats.com/tracker.js"></script>
+
     %sveltekit.head%
 </head>
 
