--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
     <script>window.plausible = window.plausible || function () { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
     <!-- One Dollar Stats -->
-    <script defer data-site-id="riju.ai" src="https://assets.onedollarstats.com/tracker.js"></script>
+    <script defer src="https://assets.onedollarstats.com/tracker.js"></script>
 
     %sveltekit.head%
 </head>
